// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentTimeline props timelineIcon defaults to a avatar with a \`userAvatar\` icon 1`] = `
<div
  aria-label=""
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
  role="img"
  title=""
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="userAvatar"
  />
</div>
`;

exports[`EuiCommentTimeline props timelineIcon is rendered with a ReactNode 1`] = `
<div
  aria-label="username"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user-subdued"
  role="img"
  title="username"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="userAvatar"
  />
</div>
`;

exports[`EuiCommentTimeline props timelineIcon is rendered with a string 1`] = `
<div
  aria-label=""
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
  role="img"
  title=""
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="dot"
  />
</div>
`;

exports[`EuiCommentTimeline props timelineIcon is rendered with timelineIconAriaLabel 1`] = `
<div
  aria-label="timelineIconAriaLabel"
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
  role="img"
  title="timelineIconAriaLabel"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="dot"
  />
</div>
`;
